--- a/hubble/src/index.css
+++ b/hubble/src/index.css
@@ -1,3 +1,7 @@
+html {
+    text-align: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.hero {
+    background-image: url("https://imgsrc.hubblesite.org/hvi/uploads/image_file/image_attachment/32529/STScI-H-p2114a-m-2000x1125.png");
+    background-size: cover;
+    background-color: grey !important;
+}
+
+.navbar {
+    position: sticky;
+    top: 0;
 }
