Updated gallery page and hero image to use new NASA API.

--- a/hubble/src/index.css
+++ b/hubble/src/index.css
@@ -17,7 +17,7 @@ code {
 }
 
 .hero {
-    background-image: url("https://imgsrc.hubblesite.org/hvi/uploads/image_file/image_attachment/32529/STScI-H-p2114a-m-2000x1125.png");
+    background-image: url("https://images-assets.nasa.gov/image/GSFC_20171208_Archive_e000017/GSFC_20171208_Archive_e000017~orig.jpg");
     background-size: cover;
     background-color: grey !important;
 }
